--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "navigo": "^8.11.1"
   }
 }
